# trace

./: .gitignore  Dockerfile  Dockerfile.prod  README.md  apprunner.yaml  deploy-lambda.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  lambda_handler.py  pyproject.toml  requirements.txt  serverless.yml
.github/: DEPLOYMENT.md
.github/workflows/: deploy.yml  test.yml
terraform/: lambda.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_users.py
traceapi/: main.py
traceapi/api/api_v1/endpoints/: contracts.py  listings.py  users.py
traceapi/core/: config.py  security.py
traceapi/crud/: crud_contract.py  crud_listings.py  crud_user.py
traceapi/db/: base_class.py  models.py  session.py
traceapi/schemas/: contract.py  listing.py  user.py  wallet.py
traceapi/utils/: dependencies.py
